# tarsisdrp

./: README.md  setup.cfg
src/tarsisdrp/: drp.yaml  loader.py  products.py
src/tarsisdrp/instrument/configs/: component-386ebb02-e6f4-485f-8462-c34751f93738.json  component-bb6b6037-b71a-48af-9eae-560a215e36c8.json  component-d7141ac9-f72d-4760-8de0-59c07d773f17.json  component-f77f79b6-21da-4973-adf9-8d7525285c0c.json  instrument-866d074e-bc03-49a6-941a-11ebc1b3f136.json
src/tarsisdrp/instrument/tests/: test_configs.py
src/tarsisdrp/recipes/auxiliary/: __init__.py
src/tarsisdrp/tests/: test_loader.py
