[metadata]
name = tarsisdrp
version = 0.1.dev0
author = Nicolás Cardiel
author_email = cardiel@ucm.es
url = https://github.com/guaix-ucm/tarsisdrp
license = GPLv3
license_files =
    LICENSE
description = TARSIS Data Reduction Pipeline
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find:
package_dir =
    = src
install_requires =
    setuptools>=39.2
    numina >= 0.22

[options.packages.find]
where = src

[options.package_data]
tarsisdrp = drp.yaml

[options.extras_require]
test =
    pytest
    pytest-remotedata
docs =
    sphinx
    numpydoc

[options.entry_points]
numina.pipeline.1 =
    TARSIS = tarsisdrp.loader:load_drp

[bdist_wheel]
universal = 1
